# caulong

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0906a255f91f_create_members.py  3a1da6d3c91e_create_play_sessions.py  3f2b8a7d9c10_rename_member_table_to_members.py  7a4b1d2e8f90_add_username_to_members.py  8c6d4f2a1b30_create_fund_transactions.py  b2c9e1f4a7d0_create_play_session_cost_items.py  c3d8f2a6b1e4_create_cost_categories.py  d4e9a1b7c2f5_add_category_to_fund_transactions.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: ai.py  auth.py  cost_categories.py  fund.py  health.py  members.py  play_sessions.py  reports.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  fund_transaction.py  member.py  play_session.py
backend/app/schemas/: ai.py  auth.py  cost_category.py  fund_transaction.py  member.py  play_session.py  report.py
backend/app/services/: ai.py  auth.py  cost_categories.py  fund_transactions.py  members.py  play_sessions.py  reports.py
docs/: 00-working-agreement.md  01-requirements.md  02-data-design.md  03-api-design.md  04-implementation-plan.md  05-learning-path.md  06-backend-implementation-plan.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
(+15 files in other folders)
