[project]
name = "badminton-fund-backend"
version = "0.1.0"
description = "FastAPI backend for badminton fund management"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.14.0",
    "email-validator>=2.3.0",
    "fastapi==0.115.6",
    "psycopg[binary]==3.2.3",
    "pwdlib[argon2]==0.2.1",
    "pyjwt==2.10.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
